--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,3 +16,14 @@
 .custom-marker-popup .mapboxgl-popup-tip {
   border: 0px;
 }
+
+.ant-picker-input > input {
+  font-family: "Montserrat", sans-serif !important;
+  font-weight: 500 !important;
+  font-size: 16px !important;
+}
+
+input[type="month"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  cursor: pointer;
+}
